--- a/play.html
+++ b/play.html
@@ -8,18 +8,19 @@
         <h2>Othello</h2>
         <h3>SCENE III. A hall in the castle.</h3>
         <p>
-            OTHELLO
-Good Michael, look you to the guard to-night:
+           <h4> OTHELLO </h4>
+<p>Good Michael, look you to the guard to-night:
 Let's teach ourselves that honourable stop,
-Not to outsport discretion.
-CASSIO
-Iago hath direction what to do;
+Not to outsport discretion.</p>
+<h4>CASSIO</h4>
+<p>Iago hath direction what to do;
 But, notwithstanding, with my personal eye
-Will I look to't.
-OTHELLO
-Iago is most honest.
-Michael, good night: to-morrow with your earliest
+Will I look to't.</p>
+<h4>OTHELLO</h4>
+<p>Iago is most honest.
+<p>Michael, good night: to-morrow with your earliest
 Let me have speech with you.
+</p>
 To DESDEMONA
 
 Come, my dear love,
@@ -27,27 +28,29 @@ The purchase made, the fruits are to ensue;
 That profit's yet to come 'tween me and you.
 Good night.
 Exeunt OTHELLO, DESDEMONA, and Attendants
+</p>
 
-Enter IAGO
+<p>Enter IAGO</p>
 
-CASSIO
+<h4>CASSIO</h4>
 Welcome, Iago; we must to the watch.
-IAGO
-Not this hour, lieutenant; 'tis not yet ten o' the
+<h4>IAGO</h4>
+<p>Not this hour, lieutenant; 'tis not yet ten o' the
 clock. Our general cast us thus early for the love
 of his Desdemona; who let us not therefore blame:
 he hath not yet made wanton the night with her; and
 she is sport for Jove.
-CASSIO
-She's a most exquisite lady.
-IAGO
+</p>
+<h4>CASSIO</h4>
+<p>She's a most exquisite lady.</p>
+<h4>IAGO</h4>
 And, I'll warrant her, fun of game.
-CASSIO
-Indeed, she's a most fresh and delicate creature.
-IAGO
-What an eye she has! methinks it sounds a parley of
-provocation.
-CASSIO
+<h4>CASSIO</h4>
+<p>Indeed, she's a most fresh and delicate creature.</p>
+<h4>IAGO</h4>
+<p>What an eye she has! methinks it sounds a parley of
+provocation.</p>
+<h4>CASSIO</h4>
 An inviting eye; and yet methinks right modest.
         </p>
     </body>
