Modified css file

--- a/play.html
+++ b/play.html
@@ -21,8 +21,9 @@ Will I look to't.</p>
 <p>Michael, good night: to-morrow with your earliest
 Let me have speech with you.
 </p>
-To DESDEMONA
+<p>To DESDEMONA</p>
 
+<p>
 Come, my dear love,
 The purchase made, the fruits are to ensue;
 That profit's yet to come 'tween me and you.
