linked style sheet to css

--- a/play.html
+++ b/play.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="Shakespeare.css">
         <title>Shakespeare Play</title>
     </head>
     <body>
@@ -9,21 +10,21 @@
         <h3>SCENE III. A hall in the castle.</h3>
         <p>
            <h4> OTHELLO </h4>
-<p>Good Michael, look you to the guard to-night:
+<p class="speech OTHELLO">Good Michael, look you to the guard to-night:
 Let's teach ourselves that honourable stop,
 Not to outsport discretion.</p>
-<h4>CASSIO</h4>
+<h4 class="Name">CASSIO</h4>
 <p>Iago hath direction what to do;
 But, notwithstanding, with my personal eye
 Will I look to't.</p>
-<h4>OTHELLO</h4>
-<p>Iago is most honest.
-<p>Michael, good night: to-morrow with your earliest
+<h4 class="Name">OTHELLO</h4>
+<p class="speech OTHELLO">Iago is most honest.
+Michael, good night: to-morrow with your earliest
 Let me have speech with you.
 </p>
-<p>To DESDEMONA</p>
+<p class="stage-direction">To DESDEMONA</p>
 
-<p>
+<p class="speech DESDEMONA">
 Come, my dear love,
 The purchase made, the fruits are to ensue;
 That profit's yet to come 'tween me and you.
@@ -31,27 +32,27 @@ Good night.
 Exeunt OTHELLO, DESDEMONA, and Attendants
 </p>
 
-<p>Enter IAGO</p>
+<p class="stage-direction">Enter IAGO</p>
 
-<h4>CASSIO</h4>
+<h4 class="Name">CASSIO</h4>
 Welcome, Iago; we must to the watch.
-<h4>IAGO</h4>
-<p>Not this hour, lieutenant; 'tis not yet ten o' the
+<h4 class="Name">IAGO</h4>
+<p class="speech IAGO">Not this hour, lieutenant; 'tis not yet ten o' the
 clock. Our general cast us thus early for the love
 of his Desdemona; who let us not therefore blame:
 he hath not yet made wanton the night with her; and
 she is sport for Jove.
 </p>
-<h4>CASSIO</h4>
-<p>She's a most exquisite lady.</p>
-<h4>IAGO</h4>
+<h4 class="Name">CASSIO</h4>
+<p class="speech CASSIO">She's a most exquisite lady.</p>
+<h4 class="Name">IAGO</h4>
 And, I'll warrant her, fun of game.
-<h4>CASSIO</h4>
-<p>Indeed, she's a most fresh and delicate creature.</p>
-<h4>IAGO</h4>
-<p>What an eye she has! methinks it sounds a parley of
+<h4 class="Name">CASSIO</h4>
+<p class="speech CASSIO">Indeed, she's a most fresh and delicate creature.</p>
+<h4 class="Name">IAGO</h4>
+<p class="speech IAGO">What an eye she has! methinks it sounds a parley of
 provocation.</p>
-<h4>CASSIO</h4>
+<h4 class="Name">CASSIO</h4>
 An inviting eye; and yet methinks right modest.
         </p>
     </body>
