--- a/play.html
+++ b/play.html
@@ -55,5 +55,32 @@ provocation.</p>
 <h4 class="Name">CASSIO</h4>
 An inviting eye; and yet methinks right modest.
         </p>
+        <table>
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Offer</th>
+            </tr>
+            <tr>
+                <td>CASSIO</td>
+                <td>Nani</td>
+                <td>100000$</td>
+            </tr>
+            <tr>
+                <td>OTHELLO</td>
+                <td>Mahesh</td>
+                <td>200000$</td>
+            </tr>
+            <tr>
+                <td>DESDEMONA</td>
+                <td>Ravi</td>
+                <td>150000$</td>
+            </tr>
+            <tr>
+                <td>IAGO</td>
+                <td>rakesh</td>
+                <td>200500$</td>
+            </tr>
+        </table>
     </body>
 </html>
