--- a/play.html
+++ b/play.html
@@ -35,7 +35,7 @@ Exeunt OTHELLO, DESDEMONA, and Attendants
 <p class="stage-direction">Enter IAGO</p>
 
 <h4 class="Name">CASSIO</h4>
-Welcome, Iago; we must to the watch.
+<p class="speech CASSIO">Welcome, Iago; we must to the watch.</p>
 <h4 class="Name">IAGO</h4>
 <p class="speech IAGO">Not this hour, lieutenant; 'tis not yet ten o' the
 clock. Our general cast us thus early for the love
@@ -46,14 +46,14 @@ she is sport for Jove.
 <h4 class="Name">CASSIO</h4>
 <p class="speech CASSIO">She's a most exquisite lady.</p>
 <h4 class="Name">IAGO</h4>
-And, I'll warrant her, fun of game.
+<p class="speech IAGO">And, I'll warrant her, fun of game.</p>
 <h4 class="Name">CASSIO</h4>
 <p class="speech CASSIO">Indeed, she's a most fresh and delicate creature.</p>
 <h4 class="Name">IAGO</h4>
 <p class="speech IAGO">What an eye she has! methinks it sounds a parley of
 provocation.</p>
 <h4 class="Name">CASSIO</h4>
-An inviting eye; and yet methinks right modest.
+<p class="speech CASSIO">An inviting eye; and yet methinks right modest.</p>
         </p>
         <table>
             <tr>
