added shadow text in css

--- a/play.html
+++ b/play.html
@@ -9,15 +9,15 @@
         <h2>Othello</h2>
         <h3>SCENE III. A hall in the castle.</h3>
         <p>
-           <h4> OTHELLO </h4>
+           <h4 class="name"> OTHELLO </h4>
 <p class="speech OTHELLO">Good Michael, look you to the guard to-night:
 Let's teach ourselves that honourable stop,
 Not to outsport discretion.</p>
-<h4 class="Name">CASSIO</h4>
+<h4 class="name">CASSIO</h4>
 <p>Iago hath direction what to do;
 But, notwithstanding, with my personal eye
 Will I look to't.</p>
-<h4 class="Name">OTHELLO</h4>
+<h4 class="name">OTHELLO</h4>
 <p class="speech OTHELLO">Iago is most honest.
 Michael, good night: to-morrow with your earliest
 Let me have speech with you.
@@ -34,25 +34,25 @@ Exeunt OTHELLO, DESDEMONA, and Attendants
 
 <p class="stage-direction">Enter IAGO</p>
 
-<h4 class="Name">CASSIO</h4>
+<h4 class="name">CASSIO</h4>
 <p class="speech CASSIO">Welcome, Iago; we must to the watch.</p>
-<h4 class="Name">IAGO</h4>
+<h4 class="name">IAGO</h4>
 <p class="speech IAGO">Not this hour, lieutenant; 'tis not yet ten o' the
 clock. Our general cast us thus early for the love
 of his Desdemona; who let us not therefore blame:
 he hath not yet made wanton the night with her; and
 she is sport for Jove.
 </p>
-<h4 class="Name">CASSIO</h4>
+<h4 class="name">CASSIO</h4>
 <p class="speech CASSIO">She's a most exquisite lady.</p>
-<h4 class="Name">IAGO</h4>
+<h4 class="name">IAGO</h4>
 <p class="speech IAGO">And, I'll warrant her, fun of game.</p>
-<h4 class="Name">CASSIO</h4>
+<h4 class="name">CASSIO</h4>
 <p class="speech CASSIO">Indeed, she's a most fresh and delicate creature.</p>
-<h4 class="Name">IAGO</h4>
+<h4 class="name">IAGO</h4>
 <p class="speech IAGO">What an eye she has! methinks it sounds a parley of
 provocation.</p>
-<h4 class="Name">CASSIO</h4>
+<h4 class="name">CASSIO</h4>
 <p class="speech CASSIO">An inviting eye; and yet methinks right modest.</p>
         </p>
         <table>
@@ -82,5 +82,6 @@ provocation.</p>
                 <td>200500$</td>
             </tr>
         </table>
+        <a href="play2.html">Second page</a>
     </body>
 </html>
