--- a/play2.html
+++ b/play2.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="Shakespeare.css">
         <title>And the play continues</title>        
     </head>
     <body>
         <h1>Abhilash Dhumala Presents</h1>
         <h2>Othello</h2>
-        <h3>SCENE III. A hall in the castle.</h3>
+        <h3>SCENE III. A hall in the castle.
+            <h4 class="name">IAGO</h4>
+<p class="IAGO">And when she speaks, is it not an alarum to love?</p>
+<h4 class="name">CASSIO</h4>
+<p class="CASSIO">She is indeed perfection.</p>
+<h4 class="name">IAGO</h4>
+<p class="IAGO">Well, happiness to their sheets! Come, lieutenant, I
+have a stoup of wine; and here without are a brace
+of Cyprus gallants that would fain have a measure to
+the health of black Othello.</p>
+<h4 class="name">CASSIO</h4>
+<p class="speech CASSIO">Not to-night, good Iago: I have very poor and
+unhappy brains for drinking: I could well wish
+courtesy would invent some other custom of
+entertainment.</p>
+        </h3>
+        <a href="play.html">First page</a>
     </body>
 </html>
